# dspy-training

./: .env.sample  00_simple_response.py  01_00_module_chain_of_thought.py  01_00_module_math.py  01_01_module_bestofn.py  01_02_module_multi_chain_comparison.py  01_03_module_parallel.py  01_04_predict.py  01_06_react.py  01_07_codeact.py  01_08_refine.py  README.md  main.py  pyproject.toml
.devcontainer/: devcontainer.json
01_module/: 01_02_module_multi_chain_comparison.py  01_05_program_of_thought.py
02_evaluation/: 02_00_gepa_for_aime.py
10_signagure/: signature_class_cot.py  signature_class_predict.py  signature_inline_cot.py
11_reuse_module/: 00_save_without_program.py  01_save_with_program.py  02_load_without_program.py  03_load_with_program.py
11_reuse_module/artifacts/with_program/: program.pkl
11_reuse_module/artifacts/without_program/: saved_without_program.json
12_optimize_bootstrap_few_shot/: 00_bootstrap_few_shot.py  01_bootstrap_few_shot_hotspotqa.py
12_optimize_bootstrap_few_shot/artifacts/: hotpotqa_optimized.json  with_optimize.json  without_optimize.json
13_optimize_gepa/: 00_gepa_for_aime.py  01_evaluate.py
13_optimize_gepa/artifacts/: aime_baseline.json  aime_optimized_gepa.json
