[project]
name = "dspy-training"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "datasets>=4.4.1",
    "dspy>=3.0.3",
    "langfuse>=3.9.1",
    "openinference-instrumentation-dspy>=0.1.30",
    "python-dotenv>=1.2.1",
]
